k8s/nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlb-nextgen-dev
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: "nlb-nextgen-dev"
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-201b3944, subnet-ad6f1e82
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
